[gd_scene load_steps=8 format=3 uid="uid://5l4a4fm81lfb"]

[ext_resource type="Script" uid="uid://dx8528gh7afh6" path="res://scripts/UI/MainMenu/main_menu.gd" id="1_lwpty"]
[ext_resource type="Texture2D" uid="uid://bmp1h6oouy0ti" path="res://assets/backgrounds/Main_menu/Backgroundv2.jpeg" id="2_lwpty"]
[ext_resource type="FontFile" uid="uid://bnutn7cc24q22" path="res://assets/Fonts/Jersey25-Regular.ttf" id="3_65fln"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lwpty"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlxw3"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2ps0"]
bg_color = Color(0.6, 0.6, 0.588235, 0)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sahmk"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwpty")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lwpty")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -405.0
offset_top = 110.0
offset_right = 409.0
offset_bottom = 211.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.952941, 0.901961, 0, 1)
theme_override_fonts/font = ExtResource("3_65fln")
theme_override_font_sizes/font_size = 100
text = "Elude: The Nusantara"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -186.0
offset_right = 259.0
offset_bottom = -15.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.671587, 0.634837, 1.92523e-07, 1)
theme_override_colors/font_color = Color(0.952941, 0.901961, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_65fln")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxFlat_lwpty")
theme_override_styles/hover = SubResource("StyleBoxFlat_rlxw3")
theme_override_styles/normal = SubResource("StyleBoxFlat_x2ps0")
text = "Play"

[node name="Option" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.670588, 0.635294, 0, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.968627, 0.505882, 1)
theme_override_colors/font_color = Color(0.952941, 0.901961, 0, 1)
theme_override_fonts/font = ExtResource("3_65fln")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxFlat_sahmk")
theme_override_styles/hover = SubResource("StyleBoxFlat_rlxw3")
theme_override_styles/normal = SubResource("StyleBoxFlat_x2ps0")
text = "Option"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Option" to="." method="_on_option_pressed"]
